# Sypoo.com

./: README.md  docker-compose.yml  pyproject.toml
fastapi-application/: create_fastapi_app.py
fastapi-application/alembic/versions/: 2024_11_14_0254-eedd6f66c346_initial_migration.py  2024_12_20_1141-0753fec72c6d_initial.py  2024_12_26_1028-6c7d443abd8b_fix_spelling.py  2024_12_26_1037-ddc7ff339ee9_fix_spelling.py  2024_12_26_1049-c8cd1fc48b0b_help_me.py  2024_12_26_1328-8525e79e1b56_edit_project_model.py  2024_12_26_1333-2b7a5a1afa24_delete_user_model.py  2024_12_26_1913-d57151fcaf3b_add_user.py  2024_12_26_1915-6c87dcc84bce_add_user_2.py  2024_12_26_1953-7d7a88bab290_remove_email_from_user.py
fastapi-application/api/api_v1/: __init__.py  auth.py  projects.py  users.py
fastapi-application/auth/: auth_handler.py
fastapi-application/core/: config.py
fastapi-application/core/models/: __init__.py  projects.py  user.py
fastapi-application/core/schemas/: project.py  token.py  user.py
fastapi-application/crud/: project.py
react-application/: index.html  package-lock.json  package.json  tailwind.config.js
react-application/src/: App.jsx  index.css
react-application/src/api/: auth.js  project.js
react-application/src/components/: AddProjectForm.jsx  AuthModal.jsx  Navbar.jsx
react-application/src/context/: UserContext.jsx
react-application/src/pages/: Home.jsx  ProjectDetail.jsx  Projects.jsx
